Converted to SDK 1.8, used Paths class to generate a Path object from String.